Submenus don't open sometimes #58870

Closed
opened 2018-12-06 15:32:48 +01:00 by Hawk J · 8 comments

System Information
Operating system: macOS / Mac OS X 10.9 (Mavericks)
Graphics card: AMD Radeon HD 6770M

Blender Version
Broken: 2.80 beta

Short description of error
Submenus don't expand when you move the cursor in a certain way.

blender-submenu-bug.mov

(Don't mind the choppy framerate – that's just from recording on my old computer.)

Exact steps for others to reproduce the error

  1. Open a menu with submenus.
  2. Move the cursor down, go over a submenu but keep moving until just before the next item. => the hovered submenu's tooltip shows, but the submenu itself won't open.

Easy to reproduce in menus where there's a submenu as the first or last item. Simply move the cursor past the submenu, then back on it. => It won't open.

**System Information** Operating system: macOS / Mac OS X 10.9 (Mavericks) Graphics card: AMD Radeon HD 6770M **Blender Version** Broken: 2.80 beta **Short description of error** Submenus don't expand when you move the cursor in a certain way. [blender-submenu-bug.mov](https://archive.blender.org/developer/F5857707/blender-submenu-bug.mov) (Don't mind the choppy framerate – that's just from recording on my old computer.) **Exact steps for others to reproduce the error** 1. Open a menu with submenus. 2. Move the cursor down, go over a submenu but keep moving until just before the next item. => the hovered submenu's tooltip shows, but the submenu itself won't open. Easy to reproduce in menus where there's a submenu as the first or last item. Simply move the cursor past the submenu, then back on it. => It won't open.
Author

Added subscriber: @bugdetective

Added subscriber: @bugdetective

#60397 was marked as duplicate of this issue

#60397 was marked as duplicate of this issue

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Brecht Van Lommel was assigned by Sebastian Parborg 2018-12-06 18:06:05 +01:00

The video wouldn't play for me, so here is the link to it in case someone else has the same issue.
https://dev-files.blender.org/file/data/lz6u2mw2wlksvcqpguyr/PHID-FILE-fijuddfsoivkwiuyjeic/blender-submenu-bug.mov

I seem to only be able to reliably trigger this in the "view" menu if I quickly move the mouse to the bottom and outside of the menu with "Area" still highlighted. If I then wait a while and move back to the "Area" menu it won't open.

The video wouldn't play for me, so here is the link to it in case someone else has the same issue. https://dev-files.blender.org/file/data/lz6u2mw2wlksvcqpguyr/PHID-FILE-fijuddfsoivkwiuyjeic/blender-submenu-bug.mov I seem to only be able to reliably trigger this in the "view" menu if I quickly move the mouse to the bottom and outside of the menu with "Area" still highlighted. If I then wait a while and move back to the "Area" menu it won't open.

This issue was referenced by 853a03c555

This issue was referenced by 853a03c555512db232636372dfbcdf3ec931bb48

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thank you, Brecht Van Lommel & Sebastian Parborg!

Thank you, Brecht Van Lommel & Sebastian Parborg!

Added subscriber: @cyp-2

Added subscriber: @cyp-2
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58870
No description provided.