Fix T58870: submenus don't open for some specific mouse positions.